# StratTrading

./: README.md  pyproject.toml  requirements.txt
configs/: breakout_52week.yaml  candidate_aggressive_l2_rf010.yaml  candidate_aggressive_l2_rf012.yaml  candidate_aggressive_plus_cap0.5_l2_0.1.yaml  grid_ma_cross.yaml  grid_macd.yaml  large_caps.yaml  large_caps_aggressive.yaml  large_caps_relaxcap_only.yaml  ma_cross_grid.yaml  portfolio_example.yaml  rsi_mean_reversion.yaml
docs/: STRATEGIES.md
main/configs/: bollinger_breakout.yaml  candidate_aggressive_l2.yaml  candidate_aggressive_plus_rf014.yaml  candidate_aggressive_plus_rf014_highcost.yaml  donchian_breakout.yaml  dual_momentum.yaml  grid_momentum.yaml  large_caps_aggressive_l2.yaml  large_caps_relaxcap_nomin.yaml  macd_crossover.yaml  momentum_rank.yaml  portfolio_example_capped.yaml  sample_synthetic.yaml  sample_yfinance.yaml
main/src/options_trader/: utils.py
options_trader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
options_trader/cli/: grid_search.py  run_multi.py
options_trader/core/: backtester.py  events.py  interfaces.py
options_trader/data/: synthetic.py
options_trader/metrics/: performance.py
scripts/: aggregate_grid_results.py  aggregate_robust_results.py  aggregate_rolling_summary.py  analyze_weights_and_bad_tickers.py  bootstrap_analysis.py  compare_diagnostics.py  generate_execution_orders.py  plot_compare_experiments.py  plot_compare_maxcap95.py  reconcile_composite.py  reconcile_worst_split.py  rolling_oos.py  simulate_caps_and_l2.py
tests/: conftest.py  test_smoke.py
(+123 files in other folders)
