[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-trader"
version = "0.1.0"
description = "Automated stock trading machine: backtesting, simulation, and paper-trading framework"
authors = [{ name = "Mayank" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "yfinance>=0.2.38",
  "PyYAML>=6.0.2",
  "scipy>=1.13",
  "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
